--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+Quine McClusky Algorithm
+==========================
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is CSCE 230 Digital Design Optimization algorithm of Quine McClusky with Dr. Mohamed Shalan.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Technology
+- C ( For Ruby Extension )
+- C++ ( For the algorithm )
+- Ruby on Rails
+- Nginx ( Web Server )
+- Passenger Phusion ( Rails Rack Server on top of Nginx )
